1. Collection API Улучшения [#221781]